--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,24 @@ p{
   align-items: center;
 
 }
+
+.add-button{
+
+  background:linear-gradient(to right, #977ADC, #70D7E9);
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.task-input{
+
+  background:linear-gradient(to right, #c7c2d4, #99cfd9);
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
